--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" routerLink="/home">Prem Prakash
-            <span>AngularJs Consultant</span>
+            <span>Angular Consultant</span>
           </a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
