--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'node_modules/angular2-toaster/toaster';
 body{
     color: #000;
     background-color: #f1f1f1;
@@ -39,3 +40,16 @@ hr{
     width: 67.4%;
 }
 }
+.ng-valid[required], .ng-valid.required  {
+    border-left: 10px solid #42A948; /* green */
+  }
+  
+  .ng-invalid:not(form),  {
+    border-left: 10px solid #ec0d0d; /* red */
+  }
+  .custom-error  {
+    border-left: 10px solid #ec0d0d !important; /* red */
+  }
+  .error-message{
+      color:#ec0d0d;
+  }
