added lazy loading

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'node_modules/angular2-toaster/toaster';
+@import 'node_modules/nvd3/build/nv.d3';
 body{
     color: #000;
     background-color: #f1f1f1;
