--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="row custom-row">
-    <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 left-aside box-shadow">
+    <!-- <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 left-aside box-shadow">
+        <nvd3 [options]="options" [data]="data"></nvd3>
     </div>
     <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 right-aside box-shadow">
             <h2 class="font-bold">All Queries</h2>
@@ -31,5 +32,24 @@
                     <td>{{contact.message}}</td>
                 </tr>
             </table>   
+    </div> -->
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 box-shadow">
+        <ul class="nav nav-pills nav-stacked">
+            <li>
+                <a href="#">Dashboard</a>
+            </li>
+            <li>
+                <a routerLink="/personalInfo">Personal Info</a>
+            </li>
+            <li>
+                <a href="#">Menu 2</a>
+            </li>
+            <li>
+                <a href="#">Menu 3</a>
+            </li>
+        </ul>
+    </div>
+    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 box-shadow">
+        <router-outlet></router-outlet>
     </div>
 </div>
