--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -33,13 +33,13 @@
                 </tr>
             </table>   
     </div> -->
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 box-shadow">
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 left-side box-shadow">
         <ul class="nav nav-pills nav-stacked">
             <li>
                 <a href="#">Dashboard</a>
             </li>
             <li>
-                <a routerLink="/personalInfo">Personal Info</a>
+                <a [routerLink]="['personalInfo']">Personal Info</a>
             </li>
             <li>
                 <a href="#">Menu 2</a>
@@ -49,7 +49,7 @@
             </li>
         </ul>
     </div>
-    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 box-shadow">
+    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 right-aside box-shadow" style="margin-left:15px;">
         <router-outlet></router-outlet>
     </div>
 </div>
