--- a/src/app/personal-detail/personal-detail.component.html
+++ b/src/app/personal-detail/personal-detail.component.html
@@ -1,8 +1,5 @@
 <div class="row custom-row">
-  <div class="col-lg-1 col-md-1 col-sm-1 col-xs-12">
-
-  </div>
-  <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 box-shadow" style="padding: 15px">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding: 15px">
     <h3 style="text-align:center;">Experience Detail</h3>
     <hr style="margin-bottom:15px;">
     <form name="personalInfo" class="form-horizontal" #personalInfo="ngForm">
@@ -39,8 +36,5 @@
         </div>
       </div>
     </form>
-  </div>
-  <div class="col-lg-1 col-md-1 col-sm-1 col-xs-12">
-
   </div>
 </div>
