--- a/src/app/dashboard/js-tutorials/list.html
+++ b/src/app/dashboard/js-tutorials/list.html
@@ -1,5 +1,5 @@
 <div class="row custom-row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                 <div style="background-color: rgb(0, 238, 255);" class="tutorial-container">
@@ -44,5 +44,6 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
+    <h2 style="margin:15px;">Comming Soon !!!!</h2>
 </div>
