committed ang-basics

--- a/src/app/dashboard/angular-tutorial/ang-basics/ang-basics.html
+++ b/src/app/dashboard/angular-tutorial/ang-basics/ang-basics.html
@@ -1,5 +1,75 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <h2 style="text-align:center;">
-        <img style="width: 50px;" src="../../../assets/ang.png">ngular Tutorial
-    </h2>
+    <div class="row">
+        <h2 style="text-align:center;">
+            <img style="width: 50px;" src="../../../assets/ang.png">ngular Tutorial
+        </h2>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h4>
+                Angular is one of the most popular javascript frameworks for creating web apps. There is a huge difference between Angular
+                Js(1.x) and Angular 2. Angular team has re-written the Angular and also decided to call Angular instead of
+                calling Angular 2 or Angular 4 or any latest version.
+            </h4>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h3>Angular Set Up</h3>
+            <h5>You need to set up your development environment before you can do anything. Install
+                <a href="https://nodejs.org/en/download/">Node.js® and npm</a> if they are not already on your machine.
+            </h5>
+            <h5 style="color: #FF9800;font-weight: bold;">
+                Verify that you are running at least node 6.9.x and npm 3.x.x by running node -v and npm -v in a terminal/console window.
+                Older versions produce errors, but newer versions are fine.
+            </h5>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h5>
+                Install
+                <a hre="https://cli.angular.io/">Angular CLI</a> globally on your machine. Open your terminal window and run below command.
+            </h5>
+            <div class="code-example">
+                <h5>
+                    npm install -g @angular/cli
+                </h5>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h5>
+                Create a new project using Angular CLI. Run the below command in your terminal window. Wait for few minutes as it will take
+                time to set up the project.
+            </h5>
+            <div class="code-example">
+                <h5>
+                    ng new your-app-name
+                </h5>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h5>
+                Once you done with your project set up, go to project directory and start the application by running below command.
+            </h5>
+            <div class="code-example">
+                <h5>
+                    cd your-app-name
+                </h5>
+                <h5>
+                    ng serve --open
+                </h5>
+            </div>
+            <h5>
+                The ng serve will launch the servers and --open or -o flag will 
+                open your browser on http://localhost:4200/. The ng serve command will watch
+                your files and rebuild apps as you make any changes to those files.
+            </h5>
+        </div>
+    </div>
 </div>
