--- a/src/app/dashboard/angular-tutorial/list.html
+++ b/src/app/dashboard/angular-tutorial/list.html
@@ -3,44 +3,46 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div style="background-color: rgb(0, 238, 255);" class="tutorial-container">
-                        <a [routerLink]="['angBasics']"><h3>Angular Basics</h3></a>
+                        <a [routerLink]="['angBasics']">
+                            <h4>Angular Basics</h4>
+                            </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="tutorial-container" style="background-color:#6ac4da;">
-                        <h3>Angular Modules</h3>
+                        <h4>Angular Modules</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="tutorial-container" style="background-color:#717eb9;">
-                        <h3>Angular Coponent</h3>
+                        <h4>Angular Coponent</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="tutorial-container" style="background-color:#ca6ada;">
-                        <h3>Angular Routing</h3>
+                        <h4>Angular Routing</h4>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div style="background-color: rgb(0, 238, 255);" class="tutorial-container">
-                        <h3>Lazy Loading</h3>
+                        <h4>Lazy Loading</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="tutorial-container" style="background-color:#6ac4da;">
-                        <h3>Nested Routing</h3>
+                        <h4>Nested Routing</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="tutorial-container" style="background-color:#717eb9;">
-                        <h3>Angular Service</h3>
+                        <h4>Angular Service</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="tutorial-container" style="background-color:#ca6ada;">
-                        <h3>Angular Input and Output</h3>
+                        <h4>Angular Input and Output</h4>
                     </div>
                 </div>
             </div>
