--- a/src/app/dashboard/angular-tutorial/list.html
+++ b/src/app/dashboard/angular-tutorial/list.html
@@ -1,52 +1,52 @@
 <div class="row custom-row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div style="background-color: rgb(0, 238, 255);" class="tutorial-container">
-                        <a [routerLink]="['angBasics']">
-                            <h4>Angular Basics</h4>
-                            </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="tutorial-container" style="background-color:#6ac4da;">
-                        <h4>Angular Modules</h4>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="tutorial-container" style="background-color:#717eb9;">
-                        <h4>Angular Coponent</h4>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="tutorial-container" style="background-color:#ca6ada;">
-                        <h4>Angular Routing</h4>
-                    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <div class="tutorial-container" style="background-color:#6ac4da;">
+                    <a [routerLink]="['angSetup']"><h4>Angular Set Up</h4></a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div style="background-color: rgb(0, 238, 255);" class="tutorial-container">
-                        <h4>Lazy Loading</h4>
-                    </div>
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <div style="background-color: rgb(0, 238, 255);" class="tutorial-container">
+                    <a [routerLink]="['angBasics']">
+                        <h4>Angular Basics</h4>
+                    </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="tutorial-container" style="background-color:#6ac4da;">
-                        <h4>Nested Routing</h4>
-                    </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <div class="tutorial-container" style="background-color:#717eb9;">
+                    <h4>Angular Coponent</h4>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="tutorial-container" style="background-color:#717eb9;">
-                        <h4>Angular Service</h4>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="tutorial-container" style="background-color:#ca6ada;">
-                        <h4>Angular Input and Output</h4>
-                    </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <div class="tutorial-container" style="background-color:#ca6ada;">
+                    <h4>Angular Routing</h4>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <div style="background-color: rgb(0, 238, 255);" class="tutorial-container">
+                    <h4>Lazy Loading</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <div class="tutorial-container" style="background-color:#6ac4da;">
+                    <h4>Nested Routing</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <div class="tutorial-container" style="background-color:#717eb9;">
+                    <h4>Angular Service</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <div class="tutorial-container" style="background-color:#ca6ada;">
+                    <h4>Angular Input and Output</h4>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="row custom-row">
     <router-outlet></router-outlet>
