--- a/src/app/dashboard/angular-tutorial/ang-setup/ang-setup.html
+++ b/src/app/dashboard/angular-tutorial/ang-setup/ang-setup.html
@@ -44,8 +44,11 @@
                 </h5>
                 <div class="code-example">
                     <h5>
+                        <p>//it will create project with .css file</p>
                         ng new your-app-name
                     </h5>
+                    <p>//If you want to create project with scss/sass/less, then use below command</p>
+                    <h5>ng new your-app-name --style=scss or sass or lees</h5>
                 </div>
             </div>
         </div>
