--- a/src/app/dashboard/angular-tutorial/ang-setup/ang-setup.scss
+++ b/src/app/dashboard/angular-tutorial/ang-setup/ang-setup.scss
@@ -13,4 +13,7 @@ h4 {
     background-color: #333;
     border-radius: 5px;
     color: #17ff0b;
+    p{
+        color: rgb(233, 229, 229);
+    }
 }
