added personal finance management

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -45,7 +45,7 @@
                 <a [routerLink]="['angTutorials']">Angular Tutorials</a>
             </li>
             <li>
-                <a [routerLink]="['personalInfo']">Ask Question</a>
+                <a [routerLink]="['myAsset']">My Asset</a>
             </li>
         </ul>
     </div>
