commited bus fixes

--- a/src/app/dashboard/angular-tutorial/list.html
+++ b/src/app/dashboard/angular-tutorial/list.html
@@ -15,7 +15,7 @@
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                 <div class="tutorial-container" style="background-color:#717eb9;">
-                    <h4>Angular Coponent</h4>
+                    <h4>Angular Component</h4>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
