--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" routerLink="/home">Prem Prakash
-            <span>Angular Consultant</span>
+            <span>Front End Consultant</span>
           </a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -50,7 +50,7 @@
       <i class="fa fa-linkedin w3-hover-opacity"></i>
     </a>
     <div>
-      <span>Last updated on 24-Jan-2018</span>
+      <span>Last updated on 21-Feb-2018</span>
     </div>
     <div>
       <span>Designed and developed by Prem Prakash</span>
