--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-lg-12 col-md-12">
         <i class="fa fa-briefcase fa-fw font-icon-override"></i>
-        <span>Angular Js Consultant</span>
+        <span>Front End Consultant</span>
       </div>
       <div class="col-lg-12 col-md-12">
         <i class="fa fa-home fa-fw font-icon-override"></i>
@@ -19,6 +19,27 @@
       <div class="col-lg-12 col-md-12">
         <i class="fa fa-phone font-icon-override"></i>
         <span>+918446012999</span>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <i class="fa fa-asterisk fa-fw font-icon-override"></i>
+        <span>Hot Skills</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="background-color: #FFEB3B;">
+        <h4>Angular</h4>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="background-color: #FF9800;">
+        <h4>HTML5</h4>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  style="background-color: #CDDC39;">
+        <h4>JavaScript</h4>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="background-color: #FF5722;">
+        <h4>React Js</h4>
       </div>
     </div>
     <hr>
@@ -56,6 +77,16 @@
     <div class="row skill-container">
       <div class="col-lg-12 col-md-12 skill-name" style="width:60%" title="Angular js 2/4">
         <span>60%</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <span>React JS</span>
+      </div>
+    </div>
+    <div class="row skill-container">
+      <div class="col-lg-12 col-md-12 skill-name" style="width:40%" title="React Js">
+        <span>40%</span>
       </div>
     </div>
     <div class="row">
@@ -141,70 +172,70 @@
       <i class="fa fa-spinner fa-spin"></i>
     </span>
     <div *ngIf="!isLoading">
-        <div class="row">
-            <div class="col-lg-12 col-md-12">
-              <h2 class="large-font-size">
-                <i class="fa fa-suitcase fa-fw font-icon-override large-font-size"></i>
-                <span> Work Experience</span> -
-                <span class="span-color">{{myDetails.totalExp}} months</span>
-              </h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-12 col-md-12">
-              <h4>{{myDetails.summary}}</h4>
-      
-            </div>
-          </div>
-          <hr>
-          <div class="row" *ngFor="let experienceDetail of myDetails.experience">
-            <div class="col-lg-12 col-md-12">
-              <h2 class="custom-title">{{experienceDetail.title}} -
-                <span class="span-color">{{experienceDetail.company}}</span>
-              </h2>
-              <h4>
-                <span>
-                  <i class="fa fa-calendar fa-fw font-icon-override"></i>
-                </span>
-                <span class="span-color">
-                  {{experienceDetail.startDate | date}}
-                </span>
-                <span>-</span>
-                <span *ngIf="experienceDetail.todayDate.getMonth() === experienceDetail.endDate.getMonth()" class="current">Current</span>
-                <span *ngIf="experienceDetail.todayDate.getMonth() !== experienceDetail.endDate.getMonth()" class="span-color">
-                  {{experienceDetail.endDate | date}}
-                </span>
-                <span class="span-color" style="margin-left:30px;">{{experienceDetail.totalExp}} months</span>
-              </h4>
-              <h4>{{experienceDetail.descriptions}}</h4>
-            </div>
-          </div>
-          <hr>
-          <div class="row">
-            <div class="col-lg-12 col-md-12">
-              <h2 class="large-font-size">
-                <i class="fa fa-certificate  fa-fw font-icon-override large-font-size"></i>Education</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" *ngFor="let educationDetail of myDetails.education">
-              <h2 class="custom-title">{{educationDetail.universityName}}</h2>
-              <h4>
-                <span>
-                  <i class="fa fa-calendar fa-fw font-icon-override"></i>
-                </span>
-                <span class="span-color">
-                  {{educationDetail.yop}}
-                </span>
-              </h4>
-              <h4>
-                <span class="span-color font-icon-override">{{educationDetail.class}}</span>
-              </h4>
-              <h4>
-                <span class="span-color font-icon-override">{{educationDetail.division}}</span>
-              </h4>
-            </div>
-          </div>
+      <div class="row">
+        <div class="col-lg-12 col-md-12">
+          <h2 class="large-font-size">
+            <i class="fa fa-suitcase fa-fw font-icon-override large-font-size"></i>
+            <span> Work Experience</span> -
+            <span class="span-color">{{myDetails.totalExp}} months</span>
+          </h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 col-md-12">
+          <h4>{{myDetails.summary}}</h4>
+
+        </div>
+      </div>
+      <hr>
+      <div class="row" *ngFor="let experienceDetail of myDetails.experience">
+        <div class="col-lg-12 col-md-12">
+          <h2 class="custom-title">{{experienceDetail.title}} -
+            <span class="span-color">{{experienceDetail.company}}</span>
+          </h2>
+          <h4>
+            <span>
+              <i class="fa fa-calendar fa-fw font-icon-override"></i>
+            </span>
+            <span class="span-color">
+              {{experienceDetail.startDate | date}}
+            </span>
+            <span>-</span>
+            <span *ngIf="experienceDetail.todayDate.getMonth() === experienceDetail.endDate.getMonth()" class="current">Current</span>
+            <span *ngIf="experienceDetail.todayDate.getMonth() !== experienceDetail.endDate.getMonth()" class="span-color">
+              {{experienceDetail.endDate | date}}
+            </span>
+            <span class="span-color" style="margin-left:30px;">{{experienceDetail.totalExp}} months</span>
+          </h4>
+          <h4>{{experienceDetail.descriptions}}</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-lg-12 col-md-12">
+          <h2 class="large-font-size">
+            <i class="fa fa-certificate  fa-fw font-icon-override large-font-size"></i>Education</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" *ngFor="let educationDetail of myDetails.education">
+          <h2 class="custom-title">{{educationDetail.universityName}}</h2>
+          <h4>
+            <span>
+              <i class="fa fa-calendar fa-fw font-icon-override"></i>
+            </span>
+            <span class="span-color">
+              {{educationDetail.yop}}
+            </span>
+          </h4>
+          <h4>
+            <span class="span-color font-icon-override">{{educationDetail.class}}</span>
+          </h4>
+          <h4>
+            <span class="span-color font-icon-override">{{educationDetail.division}}</span>
+          </h4>
+        </div>
+      </div>
     </div>
   </div>
 </div>
