added js tutorial

--- a/src/app/dashboard/js-tutorials/list.html
+++ b/src/app/dashboard/js-tutorials/list.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="tutorial-container" style="background-color:#6ac4da;">
-                        <a [routerLink]="['angSetup']"><h4>IIFE</h4></a>
+                        <a [routerLink]="['iife']"><h4>IIFE</h4></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
@@ -20,7 +20,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="tutorial-container" style="background-color:#ca6ada;">
-                        <h4>The Module pattern</h4>
+                        <h4>JS Design Pattern</h4>
                     </div>
                 </div>
             </div>
@@ -46,6 +46,28 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                        <div style="background-color: rgb(0, 238, 255);" class="tutorial-container">
+                            <h4>JS Unit Testing</h4>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                        <div class="tutorial-container" style="background-color:#6ac4da;">
+                            <h4>Suite and Specs</h4>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                        <div class="tutorial-container" style="background-color:#717eb9;">
+                            <h4>beforeEach and afterEach</h4>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                        <div class="tutorial-container" style="background-color:#ca6ada;">
+                            <h4>spyOn and createSpy</h4>
+                        </div>
+                    </div>
+                </div>
         </div>
     </div>
     <div class="row custom-row">
