added likes and comment

--- a/src/app/_widgets/common-header/template.html
+++ b/src/app/_widgets/common-header/template.html
@@ -1,3 +1,4 @@
 <h2 style="text-align:center;">
-        <img style="width: 50px;" src="../../../assets/ang.png">ngular {{headerTitle}}
+<img style="width: 50px;" [src]="header.titleSrc">
+{{header.title}}
 </h2>
