--- a/src/app/dashboard/js-tutorials/list.html
+++ b/src/app/dashboard/js-tutorials/list.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div style="background-color: rgb(0, 238, 255);" class="tutorial-container">
-                        <a [routerLink]="['angBasics']">
+                        <a [routerLink]="['closure']">
                             <h4>Closures</h4>
                         </a>
                     </div>
