--- a/src/app/dashboard/angular-tutorial/ang-setup/ang-setup.html
+++ b/src/app/dashboard/angular-tutorial/ang-setup/ang-setup.html
@@ -1,6 +1,6 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="row">
-            <app-header title="Set Up"></app-header>
+            <app-header [header]="header"></app-header>
         </div>
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
