--- a/src/app/dashboard/js-tutorials/iife/component.html
+++ b/src/app/dashboard/js-tutorials/iife/component.html
@@ -1,6 +1,6 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <div class="row">
-        <app-header title="IIFE"></app-header>
+        <app-header [header]="header"></app-header>
     </div>
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -21,11 +21,16 @@
             </h4>
             <h4>
                 Examples
-                <div class="code-example">
-                    <span>( </span><span>function</span><span> (</span><span>)</span>
-                    <span> {{'{'}}</span><br>
-                    <span>{{"let name = "+ "'Prem Prakash';"}}</span><span style="color:grey;">{{'  //name variable is not accessible from outside'}}</span><br>
-                    <span>{{'}'}}</span><span>)();</span>
+                <div class="row code-example">
+                    <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11">
+                            <span>( </span><span>function</span><span> (</span><span>)</span>
+                            <span> {{'{'}}</span><br>
+                            <span>&nbsp;&nbsp;&nbsp;&nbsp;{{"let name = "+ "'xyz';"}}</span><span style="color:grey;">{{'  //name variable is not accessible from outside'}}</span><br>
+                            <span>{{'}'}}</span><span>)();</span>
+                    </div>
+                    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 pull-right">
+                            <app-btn-like [feedback]="feedback" (commentEvent)="enterComment($event)"></app-btn-like>
+                    </div>
                 </div>
             </h4>
         </div>
