--- a/src/app/_widgets/comment/comment.scss
+++ b/src/app/_widgets/comment/comment.scss
@@ -1,5 +1,18 @@
 .comment-section {
     padding: 5px;
-    box-shadow: 1px 2px 15px #d4d3d3;
+    box-shadow: 1px 2px 4px #d4d3d3;
     margin: 5px 0px;
+}
+.comment-container {
+    box-shadow: 0px 5px 16px gainsboro;
+    padding: 0px 10px 10px 10px;
+}
+.badge {
+    border-radius: 55px;
+    background-color: #FF5722;
+    padding: 14px;
+    width: 52px;
+    text-align: center;
+    height: 51px;
+    font-size: 25px;
 }
