--- a/src/app/_widgets/comment/comment.scss
+++ b/src/app/_widgets/comment/comment.scss
@@ -1,7 +1,9 @@
 .comment-section {
     padding: 5px;
-    box-shadow: 1px 2px 4px #d4d3d3;
+    /* box-shadow: 1px 2px 4px #d4d3d3; */
     margin: 5px 0px;
+    border: 1px solid #f3f1f1;
+    border-radius: 10px;
 }
 .comment-container {
     box-shadow: 0px 5px 16px gainsboro;
