--- a/src/app/dashboard/js-tutorials/iife/component.html
+++ b/src/app/dashboard/js-tutorials/iife/component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" scroll-tracker>
     <div class="row">
         <app-header [header]="header"></app-header>
     </div>
@@ -22,13 +22,13 @@
             <h4>
                 Examples
                 <div class="row code-example">
-                    <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
+                    <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                             <span>( </span><span>function</span><span> (</span><span>)</span>
                             <span> {{'{'}}</span><br>
                             <span>&nbsp;&nbsp;&nbsp;&nbsp;{{"let name = "+ "'xyz';"}}</span><span style="color:grey;">{{'  //name variable is not accessible from outside'}}</span><br>
                             <span>{{'}'}}</span><span>)();</span>
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 pull-right" style="width:19%;">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 pull-right btn-container">
                             <app-btn-like [feedback]="feedback" (commentEvent)="enterComment($event)"></app-btn-like>
                     </div>
                 </div>
