--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,3 +62,8 @@ hr{
         float: right;
     }
 }
+ @media only screen and (min-width:400px){
+    .btn-container {
+        width: 19%;
+    }
+ }
